# ecommerce_be

./: .gitignore  README.md  apprunner.yaml  dbdown.bat  dbup.bat  docker-compose.yaml  pyproject.toml  requirements.txt  run.cmd.dev.sh
Repository/Migration_scripts/postgres/: HostDashboard.sql  V.0_0_0.sql  V.0_0_1.sql  V.0_0_2.sql  V.0_0_3.sql  V.0_0_4.sql  V.0_0_5.sql  V.0_0_6.sql  combined_schema_dump.sql  incremental_low_risk_migration.sql  schema_dump.sql  (+3 more)
admin-frontend/: package.json
admin-frontend/app/: clientLayout.tsx  layout.tsx  page.tsx
admin-frontend/components/: header.tsx  notifications-dropdown.tsx  sidebar.tsx
airbnb_crawler/pyairbnb/: __init__.py  calendarinfo.py  details.py  experience.py  host.py  host_details.py  parse.py  price.py  reviews.py  search.py  standardize.py  start.py
app/: main.py  settings.py
app/api/: ItemLoad.py  auction.py  bidding.py  booking.py  calendar.py  review.py  upload.py  winlose.py  winner.py
app/core/: config.py  container.py  database.py  supabase_client.py
app/db/: __init__.py
app/features/: __init__.py
app/schemas/: AuctionDTO.py  BidDTO.py  BookingDTO.py  ReviewDTO.py  calendarDTO.py  winnerDTO.py
app/services/: auction_service.py  bid_service.py  booking_service.py  calendar_service.py  rabbitMQ_service.py  redis_service.py  review_service.py  winlose_service.py  winner_service.py
app/shared/: __init__.py
app/ws_integration/: notifier.py
docs/: zalopay_integration_backend.md
docs/api/: auction_payment_booking.md  payment_api.md  properties-api-documentation.md
ws-server/: ws-server.js
(+147 files in other folders)
